// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox.ts should be disabled 1`] = `

<input aria-checked="false"
       disabled="disabled"
       role="checkbox"
       type="checkbox"
       value
>

`;

exports[`VCheckbox.ts should render themed component 1`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="false"
               role="checkbox"
               type="checkbox"
               value
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          $vuetify.icons.checkboxOff
        </i>
      </div>
    </div>
    <div class="v-messages theme--light">
      <span name="message-transition"
            tag="div"
            class="v-messages__wrapper"
      >
      </span>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.ts should use custom icons 1`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages theme--light">
      <span name="message-transition"
            tag="div"
            class="v-messages__wrapper"
      >
      </span>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.ts should use custom icons 2`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages theme--light">
      <span name="message-transition"
            tag="div"
            class="v-messages__wrapper"
      >
      </span>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.ts should use custom icons 3`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
               value="buzz"
        >
        <div class="v-input--selection-controls__ripple accent--text">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons theme--light accent--text"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages theme--light">
      <span name="message-transition"
            tag="div"
            class="v-messages__wrapper"
      >
      </span>
    </div>
  </div>
</div>

`;
